<resources>
    <string name="app_name">Latihan Hacktiv8</string>
    <string name="komentar">Komentar …</string>
    <string name="button1">Explicit Button</string>
    <string name="button2">Implicit Button</string>
    <string name="move_activity">Move To Activity 2</string>
    <string name="data_input">data input</string>
    <string name="result_submit">Result Submit</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="umur">Umur</string>
    <string name="universitas">Universitas</string>
    <string name="jurusan">Jurusan</string>
    <string name="pindah_activity">Pindah Activity</string>
    <string name="pindah_activity_dengan_data">Pindah Activity Dengan Data</string>
    <string name="input_nama_lengkap">Input Nama Lengkap</string>
    <string name="pindah_activity_dengan_data_melalui_inputan">Pindah Activity Dengan Data Melalui Inputan</string>
    <string name="form_registrasi">Form Registrasi</string>
    <string name="submit">Submit</string>
    <string name="assignment_1">Assignment 1</string>
    <string name="explicit_button">Explicit Button</string>
    <string name="implicit_button">Implicit Button</string>
    <string name="assignment_sesi_6">Assignment Sesi 6</string>
    <string name="menuju_ke_telephone">Menuju ke Telephone</string>
    <string name="menuju_ke_halaman_web">Menuju ke Halaman Web</string>
    <string name="menuju_ke_gmail">Menuju ke Gmail</string>
    <string name="menuju_ke_google_calendar">Menuju ke Google Calendar</string>
    <string name="tanggal_dipilih">Tanggal dipilih</string>
    <string name="datepicker">Tanggal Lahir</string>
    <string name="tangggal_lahir">Tangggal Lahir</string>
    <string name="assignment_2">Assignment 2</string>
    <string name="place_holder">""</string>
    <string name="menggunakan_constraint_layout">Menggunakan Constraint Layout</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="left_below_top">Left Below Top</string>
    <string name="right_above_button">Right Above Button</string>
    <string name="menggunakan_relative_layout">Menggunakan Relative Layout</string>
    <string name="menggunakan_linear_layout">Menggunakan Linear Layout</string>
    <string name="assignment_sesi_8">Assignment Sesi 8</string>
    <string name="kumpulan_tugas_dan_latihan">Kumpulan Tugas dan Latihan</string>
    <string name="views_and_layout_hierarchy">Views and Layout Hierarchy</string>
    <string name="_0">0</string>
    <string name="count">COUNT</string>
    <string name="this_is_an_edit_text">This is an edit text</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="detail">Detail</string>
    <string name="club_name">Club Name</string>
    <string name="gambar_club">Gambar Club</string>
    <string name="score_keeper">Score Keeper</string>

    <string name="label_team1">Team 1</string>
    <string name="label_team2">Team 2</string>
    <string name="button_decrease">Minus Button</string>
    <string name="button_increase">Plus Button</string>
    <string name="zero">0</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
    <string name="pengurangan_1">pengurangan 1</string>
    <string name="pertambahan_1">pertambahan 1</string>

    <string name="start_task">Start Task</string>
    <string name="status">Status</string>
    <string name="hidden_text">Now you see me!</string>
    <string name="task_completed">Task Completed</string>
    <string name="compressing">Compresssing %d %%</string>

    <string name="title">Judul</string>
    <string name="description">Deskripsi</string>
    <string name="delete">Hapus</string>
    <string name="date">Date</string>
    <string name="covid_tracker_app">Covid Tracker App</string>
    <string name="total_cases_in_the_world">Total Cases in the World</string>
    <string name="total_recovered_in_the_world">Total Recovered in the World</string>
    <string name="total_deaths_in_the_world">Total Deaths in the World</string>


</resources>