<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".score_keeper.MainActivityScoreKeeper">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            style="@style/ScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/label_team1"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/decrease_team1"
            style="@style/MinusButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/pengurangan_1"
            android:onClick="decreaseScore"
            tools:ignore="UsingOnClickInXml" />

        <ImageButton
            android:id="@+id/increase_team1"
            style="@style/PlusButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/pertambahan_1"
            android:onClick="increaseScore"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:id="@+id/score_1"
            style="@style/ScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/zero"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            style="@style/ScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/label_team2"
            tools:ignore="RelativeOverlap" />

        <ImageButton
            android:id="@+id/decrease_team2"
            style="@style/MinusButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/pengurangan_1"
            android:onClick="decreaseScore"
            tools:ignore="UsingOnClickInXml" />

        <ImageButton
            android:id="@+id/increase_team2"
            style="@style/PlusButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/pertambahan_1"
            android:onClick="increaseScore"
            tools:ignore="UsingOnClickInXml" />

        <TextView
            android:id="@+id/score_2"
            style="@style/ScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/zero"
            tools:ignore="RelativeOverlap" />


    </RelativeLayout>

</LinearLayout>